@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0

left to right direction

class Company {
-Designation
}

class Port {
-Identification
-Name
-Continent
-Country
-Latitude
-longitude
-PortMagager
-PortStaff
}


class Country {
-Continent
-Alpha2-Code
-Alpha3-Code
-Country
-Population
-Capital
-Latitude
-Longitude
}

class Border {
-Country1
-Country2
}

Company "1" -- "1..*" Port : Owns >
Company "1" -- "*" Country : knows >
Country "1" -- "*" Border : has >
@enduml